# cost-optimizer-agent

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: streamlit_app.py
data/: instance_catalog.json  sample_aws_cur.csv
docs/superpowers/plans/: 2026-05-06-cost-optimizer-v1.md
docs/superpowers/specs/: 2026-05-06-cost-optimizer-v1-design.md
evals/: baseline.json  eval_runner.py  golden_set.json  metrics.py
src/cost_optimizer/: __init__.py  agent.py  cli.py  evidence_validator.py  models.py  runner.py
src/cost_optimizer/ingest/: __init__.py  aggregate.py  aws_cur.py
src/cost_optimizer/llm/: __init__.py  base.py  claude.py  mock.py
src/cost_optimizer/observability/: __init__.py  base.py  jsonl_tracer.py  langfuse_tracer.py
src/cost_optimizer/prompts/: system.md
src/cost_optimizer/providers/: __init__.py  aws.py  base.py  oci.py
src/cost_optimizer/tools/: idle.py  pricing.py  rightsizing.py  savings.py  utilization.py
tests/: conftest.py  test_agent.py  test_aggregate.py  test_cli.py  test_eval_runner.py  test_evidence_validator.py  test_ingest_aws_cur.py  test_llm_claude.py  test_llm_mock.py  test_models.py  test_observability.py  test_observability_langfuse.py  test_providers.py  test_runner.py  test_streamlit_smoke.py  test_tools_idle.py  test_tools_pricing.py  test_tools_rightsizing.py  test_tools_savings.py  test_tools_utilization.py
tests/fixtures/pricing/aws/us-east-1/: m5.large.json  t3.medium.json  t3.xlarge.json
