[project]
name = "cost-optimizer-agent"
version = "0.1.0"
description = "Tool-augmented agent that produces cloud cost optimization recommendations from billing CSVs."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.5",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "typer>=0.12",
    "httpx>=0.27",
    "diskcache>=5.6",
    "streamlit>=1.36",
    "langfuse>=2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
cost-optimizer = "cost_optimizer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
markers = [
    "live: marks tests that hit live APIs (deselect with '-m \"not live\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cost_optimizer"]
